Navigation Jump Filter Fix

--- a/develop/scss/map.scss
+++ b/develop/scss/map.scss
@@ -31,6 +31,10 @@ body {
 	background: red;
 }
 
+.invisible {
+	visibility: hidden;
+}
+
 a {
 	text-decoration: none;
 	color: inherit;
